<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.dlr.proseo</groupId>
	<artifactId>base-wrapper</artifactId>
	<version>0.1.0</version>
	<name>prosEO Base Processor Wrapper</name>
	<description>prosEO Base Processor Wrapper for externally developed, ESA-IPF-conformant processors providing procedures to execute before the start and after the end of the processor</description>

	<url>https://github.com/dlr-eoc/prosEO/base-wrapper</url>
	<organization>
		<name>DLR - Deutsches Zentrum für Luft- und Raumfahrt e. V.</name>
		<url>http://www.dlr.de</url>
	</organization>

	<properties>
		<module.version>0.1.0-SNAPSHOT</module.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>de.dlr.proseo</groupId>
			<artifactId>proseo-common</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dlr.proseo</groupId>
			<artifactId>proseo-interfaces</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>proseo-base-wrapper</finalName>
		<plugins>
			<!-- Build self-contained JAR -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>de.dlr.proseo.basewrap.BaseWrapper</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>